--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   margin: 0px 20px;
   border-radius: 0px 0px 5px 5px;
   text-align: justify;
-  padding-bottom: 100px; /* Adicione esta linha */
+  padding-bottom: 100px; 
   position: relative;
 }
 
