--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ body {
   background-color: rgb(83, 83, 83);
   display: flex;
   flex-direction: column;
-  
 }
 
 .nav-link {
   color: white;
+  transition: color 0.3s ease-in-out;
 }
 
 .nav-link:hover {
@@ -32,7 +32,7 @@ body {
   margin: 0px 20px;
   border-radius: 0px 0px 5px 5px;
   text-align: justify;
-  padding-bottom: 100px; 
+  padding-bottom: 100px;
   position: relative;
 }
 
@@ -49,15 +49,12 @@ body {
   display: flex;
   justify-content: center;
   margin-top: auto;
-
 }
-
 
 .bi,
 .bi-justify {
   color: white;
 }
-
 
 @media only screen and (min-width: 1024px) {
   .container-fluid button {
