--- a/contato.css
+++ b/contato.css
@@ -16,7 +16,7 @@ html {
   position: relative;
   min-height: 100%;
   animation-name: fade;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
   opacity: 0;
@@ -40,7 +40,7 @@ textarea {
   background-color: #f7f7f7;
   padding: 5px;
   resize: none;
-  transition: border-color 0.2s ease-in-out; /* adicionado para suavizar a mudança de cor da borda */
+  transition: border-color 0.2s ease-in-out; 
 }
 
 #mensagem {
